--- a/styles.css
+++ b/styles.css
@@ -65,9 +65,26 @@ input.form-control {
 	box-shadow:none !important;
 	font-size: .9rem;
 }
+select.form-control {
+	background: #e0e0e0;
+	border: 2px solid #e0e0e0;
+	border-radius: .4rem;
+	padding: .5rem .75rem;
+	height: auto;
+	outline: none;
+	box-shadow:none !important;
+	font-size: .9rem;
+}
+
 
 input.form-control:focus {
 	border: 2px solid #bdbdbd;
+}
+select.form-control:focus {
+	background: #e0e0e0;
+	border: 2px solid #bdbdbd;
+	outline: none;
+	box-shadow:none !important;
 }
 textarea.form-control {
 	border: 0px;
@@ -86,7 +103,82 @@ label {
 	font-size: .8rem;
 	font-weight: 600;
 }
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+  height: 41px;
+}
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+  background: transparent; 
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 30px;
+  width: 14px;
+  border-radius: 3px;
+  background: #e0e0e0;
+  cursor: pointer;
+  margin-top: -10px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+}
+/* All the same stuff for IE */
+/* All the same stuff for Firefox */
+input[type=range]::-moz-range-thumb,
+input[type=range]::-ms-thumb {
+  height: 30px;
+  width: 14px;
+  border-radius: 3px;
+  background: #e0e0e0;
+  cursor: pointer;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  background: #f5f5f5;
+  border-radius: 2px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track,
+input[type=range]:focus::-ms-fill-lower  {
+  background: #eee;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  background: #f5f5f5;
+  border-radius: 2px;
+}
 
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #f5f5f5;
+  border-radius: 2px;
+}
+input[type=range]::-ms-fill-upper {
+  background: #f5f5f5;
+  border-radius: 2px;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #eee;
+}
 .btn-primary {
     color: #fff;
     background-color: #29b6f6;
