--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,17 @@
+/*
+bg eceff1
+light cfd8dc
+med b0bec5
+dark 90a4ae
+
+primary 455a64
+primary hover 37474f
+*/
+
+
 body {
 	font-family: 'Roboto', sans-serif;
-	background: #f5f5f5;
+	background: #eceff1;
 	color: #424242;
 }
 
@@ -35,22 +46,22 @@ form {
 	text-transform: uppercase;
 	font-size: 1rem;
 	text-align: center;
-	color: #343a40;
+	color: #455a64;
 }
 
 .nav.steps .nav-item .nav-link {
 	border-radius: 0px;
-	background: #f5f5f5;
-	color: #343a40;
+	background: #eceff1;
+	color: #455a64;
 	font-weight: 400;
 }
 
 .nav.steps .nav-item .nav-link.active {
 	font-weight: 500;
-	border-bottom: 3px solid #039be5;
+	border-bottom: 3px solid #455a64;
 }
 .nav.steps .nav-item .nav-link.disabled {
-	color: #6c757d;
+	color: #b0bec5;
 }
 .form-group {
 	margin-bottom: 2rem;
@@ -60,13 +71,13 @@ form {
   font-size: 1rem;
   line-height: 1;
   color: #757575;
-  background-color: #e0e0e0;
-  border: 2px solid #e0e0e0;
+  background-color: #cfd8dc;
+  border: 2px solid #cfd8dc;
   border-radius: .4rem;
 }
 input.form-control {
 	background: #fff;
-	border: 2px solid #e0e0e0;
+	border: 2px solid #cfd8dc;
 	border-radius: .4rem;
 	padding: .5rem .75rem;
 	height: auto;
@@ -75,8 +86,8 @@ input.form-control {
 	font-size: .9rem;
 }
 select.form-control {
-	background: #e0e0e0;
-	border: 2px solid #e0e0e0;
+	background: #cfd8dc;
+	border: 2px solid #cfd8dc;
 	border-radius: .4rem;
 	padding: .5rem .75rem;
 	height: auto;
@@ -85,24 +96,24 @@ select.form-control {
 	font-size: .9rem;
 }
 .input-group-append {
-	background: #e0e0e0;
-	border: 2px solid #e0e0e0;
+	background: #cfd8dc;
+	border: 2px solid #cfd8dc;
 	border-radius: 0 .4rem .4rem 0;
 	cursor: pointer;
 }
 .input-group-text {
   color: #424242;
-  background-color: #e0e0e0;
+  background-color: #cfd8dc;
   border: 0;
   border-radius: 0;
 }
 
 input.form-control:focus {
-	border: 2px solid #bdbdbd;
+	border: 2px solid #b0bec5;
 }
 select.form-control:focus {
-	background: #e0e0e0;
-	border: 2px solid #bdbdbd;
+	background: #cfd8dc;
+	border: 2px solid #b0bec5;
 	outline: none;
 	box-shadow:none !important;
 }
@@ -110,14 +121,14 @@ textarea.form-control {
 	border: 0px;
 	resize: none;
 	padding: .6rem .75rem;
-	background: #eee;
+	background: #eceff1;
 	border-radius: .4rem;
 	outline: none;
 	box-shadow:none !important;
 	height: 8rem;
 }
 textarea.form-control:focus {
-	background: #e0e0e0;
+	background: #b0bec5;
 }
 label {
 	font-size: .8rem;
@@ -152,7 +163,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 30px;
   width: 14px;
   border-radius: 3px;
-  background: #e0e0e0;
+  background: #cfd8dc;
   cursor: pointer;
   margin-top: -10px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
 }
@@ -163,25 +174,25 @@ input[type=range]::-ms-thumb {
   height: 30px;
   width: 14px;
   border-radius: 3px;
-  background: #e0e0e0;
+  background: #cfd8dc;
   cursor: pointer;
 }
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 10px;
   cursor: pointer;
-  background: #f5f5f5;
+  background: #eceff1;
   border-radius: 2px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track,
 input[type=range]:focus::-ms-fill-lower  {
-  background: #eee;
+  background: #eceff1;
 }
 input[type=range]::-moz-range-track {
   width: 100%;
   height: 10px;
   cursor: pointer;
-  background: #f5f5f5;
+  background: #eceff1;
   border-radius: 2px;
 }
 
@@ -194,25 +205,25 @@ input[type=range]::-ms-track {
   color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-  background: #f5f5f5;
+  background: #eceff1;
   border-radius: 2px;
 }
 input[type=range]::-ms-fill-upper {
-  background: #f5f5f5;
+  background: #eceff1;
   border-radius: 2px;
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #eee;
+  background: #eceff1;
 }
 .btn-primary {
     color: #fff;
-    background-color: #29b6f6;
-    border-color: #29b6f6;
+    background-color: #455a64;
+    border-color: #455a64;
 }
 .btn-primary:hover {
     color: #fff;
-    background-color: #039be5;
-    border-color: #039be5;
+    background-color: #37474f;
+    border-color: #37474f;
 }
 .btn {
     display: inline-block;
@@ -285,7 +296,7 @@ input[type=range]:focus::-ms-fill-upper {
 .btn-yes-no {
 	display: block;
 	color: #777;
-  background-color: #eee;
+  background-color: #eceff1;
   text-align: center;
   padding: .4rem .6rem;
   cursor: pointer;
@@ -293,7 +304,7 @@ input[type=range]:focus::-ms-fill-upper {
   font-size: .9rem;
 }
 .btn-yes-no:hover {
-	background: #e0e0e0;
+	background: #cfd8dc;
 	color: #424242;
 }
 .btn-yes-no.left {
@@ -318,22 +329,22 @@ input[type=range]:focus::-ms-fill-upper {
 .form-control.is-valid, 
 .was-validated .custom-select:valid, 
 .was-validated .form-control:valid {
-  border-color: #e0e0e0;
+  border-color: #cfd8dc;
 }
 .custom-select.is-valid:focus,
 .was-validated .custom-select:valid:focus,
 .form-control.is-valid:focus, 
 .was-validated .form-control:valid:focus {
-	border-color: #bdbdbd;
+	border-color: #b0bec5;
 }
 
 .custom-select.is-invalid, .form-control.is-invalid, .was-validated .custom-select:invalid, .was-validated .form-control:invalid {
-  border-color: #e0e0e0;
+  border-color: #cfd8dc;
   border-left: 6px solid #f44336;
 }
 .custom-select.is-invalid:focus, .form-control.is-invalid:focus, .was-validated .custom-select:invalid:focus, .was-validated .form-control:invalid:focus {
-  border-color: #bdbdbd;
-  border-left: 2px solid #bdbdbd;
+  border-color: #b0bec5;
+  border-left: 2px solid #b0bec5;
 }
 
 .invalid-feedback {
@@ -344,7 +355,7 @@ input[type=range]:focus::-ms-fill-upper {
 .file-drop-box {
 	position: relative;
 	background: #fff;
-	border: 2px dashed #e0e0e0;
+	border: 2px dashed #cfd8dc;
 	border-radius: .4rem;
 	padding: .5rem .75rem;
 	outline: none;
@@ -368,16 +379,16 @@ ul.list-group li {
 	z-index:0;
 }
 .fake-button i {
-	color: #bdbdbd;
+	color: #b0bec5;
 	font-size: 2rem;	
 }
 .fake-button h5 {
 	font-size: 1rem;
-	color: #bdbdbd;
+	color: #b0bec5;
 	font-weight: 500;
 }
 .file-drop-box:hover {
-	border: 2px dashed #bdbdbd;
+	border: 2px dashed #b0bec5;
 }
 .file-input {
   position: absolute;
@@ -391,4 +402,23 @@ ul.list-group li {
 }
 .file-input:focus {
   outline: none;
+}
+
+
+
+#files_list li .file p {
+	font-size: .85rem;
+	font-weight: 500;
+	margin-bottom: 0px;
+}
+#files_list li .file p.size {
+	font-size: .75rem;
+}
+#files_list li .delete-file {
+	cursor: pointer;
+	font-size: 1.1rem;
+	color: #455a64;
+}
+#files_list li .delete-file:hover {
+	color: #37474f;
 }
