--- a/styles.css
+++ b/styles.css
@@ -72,13 +72,15 @@ form {
   line-height: 1;
   color: #757575;
   background-color: #cfd8dc;
-  border: 2px solid #cfd8dc;
-  border-radius: .4rem;
+  border:0;
+  border-bottom: 2px solid #cfd8dc;
+  border-radius: 0;
 }
 input.form-control {
 	background: #fff;
-	border: 2px solid #cfd8dc;
-	border-radius: .4rem;
+	border:0;
+	border-bottom: 2px solid #cfd8dc;
+  border-radius: 0;
 	padding: .5rem .75rem;
 	height: auto;
 	outline: none;
@@ -107,13 +109,19 @@ select.form-control {
   border: 0;
   border-radius: 0;
 }
+ input.form-control:focus {
+	border-bottom: 2px solid #b0bec5;
+}
+.input-group input.form-control {
+	border: 2px solid #cfd8dc;
+	border-radius: .4rem;
+}
 
-input.form-control:focus {
+.input-group input.form-control:focus {
 	border: 2px solid #b0bec5;
 }
 select.form-control:focus {
 	background: #cfd8dc;
-	border: 2px solid #b0bec5;
 	outline: none;
 	box-shadow:none !important;
 }
@@ -269,7 +277,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 .count-input .btn-circle {
 	display: block;
-	color: #29b6f6;
+	color: #455a64;
   width: 30px;
   height: 30px;
   border-radius: .4rem;
@@ -278,7 +286,7 @@ input[type=range]:focus::-ms-fill-upper {
   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 .count-input .btn-circle:hover {
-  color: #039be5;
+  color: #37474f;
 }
 .count-input .btn-circle i {
 	position: absolute;
@@ -296,7 +304,7 @@ input[type=range]:focus::-ms-fill-upper {
 .btn-yes-no {
 	display: block;
 	color: #777;
-  background-color: #eceff1;
+  background-color: #cfd8dc;
   text-align: center;
   padding: .4rem .6rem;
   cursor: pointer;
@@ -305,7 +313,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 .btn-yes-no:hover {
 	background: #cfd8dc;
-	color: #424242;
+	color: #37474f;
 }
 .btn-yes-no.left {
 	border-radius: 100px 0 0 100px;
@@ -314,12 +322,12 @@ input[type=range]:focus::-ms-fill-upper {
 	border-radius: .0rem 100px 100px 0;
 }
 .btn-yes-no.selected {
-	background-color: #29b6f6;
+	background-color: #455a64;
 	color: #fff;
 	font-weight: 500;
 }
 .btn-yes-no.selected:hover {
-	background-color: #29b6f6;
+	background-color: #37474f;
 	color: #fff;
 }
 
@@ -422,3 +430,92 @@ ul.list-group li {
 #files_list li .delete-file:hover {
 	color: #37474f;
 }
+
+
+
+.dtmf-row {
+	background: #eceff1;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	border-radius: .4rem;
+}
+.dtmf-cell {
+	background: #fff;
+	border: 0;
+	margin-bottom: 15px;
+}
+.dtmf-row .dtmf-cell:nth-child(10),
+.dtmf-row .dtmf-cell:nth-child(11),
+.dtmf-row .dtmf-cell:nth-child(12) {
+	margin-bottom: 0px;
+}
+.dtmf-cell .form-group {
+  margin-bottom: 1rem;
+}
+.dtmf-cell .form-group:last-child {
+  margin-bottom: 0rem;
+}
+
+.dtmf-cell .form-group input.form-control {
+	padding: .25rem .5rem;
+	font-size: .8rem;
+}
+.dtmf-cell .form-group select.form-control {
+	border-radius: .4rem;
+	padding: .25rem .5rem;
+	font-size: .8rem;
+}
+
+.dtmf-cell .card-body {
+  padding: .75rem;
+}
+.dtmf-cell .card-body .float-left {
+	line-height: 1;
+}
+.dtmf-cell .card-body p {
+	margin-bottom: 0px;
+	font-weight: 500;
+}
+input[type='checkbox'].check-custom {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+input[type='checkbox'].check-custom ~ .check-toggle {
+  width: 2rem;
+  height: 1rem;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  background: #cfd8dc;
+  border-radius: 100px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+input[type='checkbox'].check-custom:hover ~ .check-toggle {
+  opacity: 1;
+}
+
+input[type='checkbox'].check-custom:focus ~ .check-toggle {
+  opacity: 1;
+}
+
+input[type='checkbox'].check-custom ~ .check-toggle .check-mark {
+	position: absolute;
+	right: 0;
+	display: block;
+	width:1rem;
+	height: 1rem;
+	border-radius:50%;
+	background: #b0bec5;
+}
+input[type='checkbox'].check-custom:checked ~ .check-toggle .check-mark {
+	left:0;
+	background: #455a64;
+}
+
