finished closing the issues

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ form {
 	display: none;
 }
 hr {
-  border-top: 1px solid #b0bec5;
+  border-top: 2px solid #cfd8dc;
 }
 /*.nav.steps {
 	margin-bottom: 20px;
